--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "^2.39.8",
+    "@supabase/supabase-js": "^2.40.0",
     "autoprefixer": "10.4.17",
+    "axios": "^1.6.8",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
